--- a/Tests/Fixtures/StencilContexts/Yaml/sequence.yaml
+++ b/Tests/Fixtures/StencilContexts/Yaml/sequence.yaml
@@ -3,5 +3,9 @@ files:
   - data:
     - value1
     - value2
+    metadata:
+      element:
+        type: String
+      type: Array
   name: sequence
   path: sequence.yaml
