--- a/Tests/Fixtures/StencilContexts/Yaml/sequence.yaml
+++ b/Tests/Fixtures/StencilContexts/Yaml/sequence.yaml
@@ -1,11 +1,11 @@
 files:
 - documents:
   - data:
-    - value1
-    - value2
+    - "value1"
+    - "value2"
     metadata:
       element:
-        type: String
-      type: Array
-  name: sequence
-  path: sequence.yaml
+        type: "String"
+      type: "Array"
+  name: "sequence"
+  path: "sequence.yaml"
